# tuisic

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: cachix.yml
modules/: default.nix  dev-shells.nix  home-manager.nix
pkgs/: default.nix  tuisic.nix
src/: app.rs  file_item.rs  file_list.rs  file_utils.rs  logging.rs  main.rs  song.rs  song_list.rs  tui.rs
src/app_config/: mod.rs
src/app_config/providers/: local.rs  mod.rs
src/config/: defaults.rs  file_format.rs  local.rs  mod.rs  runtime.rs
src/providers/: local.rs  mod.rs
src/utils/: get_config_dir.rs  get_config_file.rs  get_data_dir.rs  mod.rs  project_directory.rs
src/view/: mod.rs
