[package]
name = "tuisic"
version = "0.1.0"
description = "A terminal music player"
authors = ["Ev357 <evest.dev@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
shellexpand = "3.1.1"
directories = "6.0.0"
